Make setup easier and outline eclipse.jdt.ls installation